# Exam-Generation

./: .gitignore  LICENSE  README.md
exam-model/: README.md  requirements.txt
rag-pipeline/: README.md  TODO.md  app.py  dev-requirements.txt  grade_exams_optimized.py  pyproject.toml  requirements.txt  run_app.py  setup.py
rag-pipeline/chroma_db/: chroma.sqlite3
rag-pipeline/config/: exploration.ipynb
rag-pipeline/src/: app.py
rag-pipeline/src/api/: endpoints.py  
rag-pipeline/src/chunking/: chunker.py
rag-pipeline/src/chunking/__init__.py/: chunker.py    
rag-pipeline/src/critic/: critic.py
rag-pipeline/src/embedding/: embedder.py  embedder.py   
rag-pipeline/src/generation/: __init__.py  assignment_generator.py  assignment_types.py  generator.py  generator.py    pdf_generator.py  question_types.py  rubric_content_analyzer.py  rubric_generator.py  rubric_types.py  rubric_visualizer.py
rag-pipeline/src/grader/: grader.py  optimized_grader.py
rag-pipeline/src/ingestion/: __init__.py  ingestion.py  vectorizer.py
rag-pipeline/src/models/: __init__.py  base.py  factory.py  langchain_google.py  langchain_groq.py  langchain_ollama.py
rag-pipeline/src/retrieval/: retriever.py  retriever.py  
rag-pipeline/src/storage/: __init__.py  vector_store.py
rag-pipeline/src/utils/: embed.py  generate_test_answers.py
rag-pipeline/src/web/: app.py
rag-pipeline/tests/: conftest.py  test_app.py  test_chunking.py  test_critic.py  test_embedding.py  test_generation.py  test_grader.py  test_ingestion.py  test_retrieval.py  test_token_counting.py
(+7 files in other folders)
